--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="kochwelt/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Kochwelt - Header</title>
   </head>
   <body>
@@ -13,7 +13,7 @@
       <div class="header-box content flex-h">
         <a class="logo-link" href="#"
           ><div class="header-logo-box flex-h">
-            <img class="logo" src="kochwelt/img/logo_small.png" />
+            <img class="logo" src="img/logo_small.png" />
             <span>Kochwelt</span>
           </div></a
         >
