--- a/mainMenu.html
+++ b/mainMenu.html
@@ -5,13 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- PNG-Icon Tab-->
-    <link
-      rel="icon"
-      type="image/png"
-      href="/kochwelt/img/logo_small_white.png"
-    />
+    <link rel="icon" type="image/png" href="img/logo_small.png" />
 
-    <link rel="stylesheet" href="kochwelt/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Kochwelt</title>
   </head>
   <body>
@@ -20,7 +16,7 @@
       <div class="header-box content flex-h">
         <a class="logo-link" href="#"
           ><div class="header-logo-box flex-h">
-            <img class="logo" src="kochwelt/img/logo_small.png" />
+            <img class="logo" src="img/logo_small.png" />
             <span>Kochwelt</span>
           </div></a
         >
@@ -184,25 +180,21 @@
             <a href="#"
               ><img
                 class="meals-picture"
-                src="kochwelt/img/food/Breakfast/breakfast.jpg"
+                src="img/food/Breakfast/breakfast.jpg"
             /></a>
           </div>
           <div class="meal flex-v">
             <span class="meal-name">Mittag</span>
             <!-- hier link zur section/seite für Mittag meals einfügen -->
             <a href="#"
-              ><img
-                class="meals-picture"
-                src="kochwelt/img/food/Main Meal/lunch.jpg"
+              ><img class="meals-picture" src="img/food/Main Meal/lunch.jpg"
             /></a>
           </div>
           <div class="meal flex-v">
             <span class="meal-name">Dessert</span>
             <!-- hier link zur section/seite für Desserts einfügen -->
             <a href="#"
-              ><img
-                class="meals-picture"
-                src="kochwelt/img/food/Desserts/dessert.jpg"
+              ><img class="meals-picture" src="img/food/Desserts/dessert.jpg"
             /></a>
           </div>
         </div>
@@ -232,9 +224,7 @@
             <!-- hier link zum rezept mit einfügen -->
             <!-- hier später img austauschen mit den rezept bild -->
             <a href="#"
-              ><img
-                class="meals-picture"
-                src="kochwelt/img/food/Main Meal/seelachs.jpg"
+              ><img class="meals-picture" src="img/food/Main Meal/seelachs.jpg"
             /></a>
             <span class="meal-name">Seelachs</span>
           </div>
@@ -244,7 +234,7 @@
             <a href="#">
               <img
                 class="meals-picture"
-                src="kochwelt/img/food/Desserts/himbeer-kuchen.jpg"
+                src="img/food/Desserts/himbeer-kuchen.jpg"
             /></a>
             <span class="meal-name">Himbeerkuchen</span>
           </div>
@@ -254,7 +244,7 @@
             <a href="#"
               ><img
                 class="meals-picture"
-                src="kochwelt/img/food/Breakfast/sandwich egg.jpg"
+                src="img/food/Breakfast/sandwich egg.jpg"
             /></a>
             <span class="meal-name">Eiersandwich</span>
           </div>
@@ -270,6 +260,8 @@
             />
           </svg>
         </div>
+
+        <!-- hier später ne funktion um durch die svgs zu schalten mit farbänderung. (fürs wechseln zwischen rezepten) -->
         <div class="meal-selection-icons flex-h">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -309,7 +301,7 @@
         <div>
           <!-- Img führt zur Startseite-->
           <a href="./index.html">
-            <img src="/kochwelt/img/logo_small_white.png" alt="" />
+            <img src="img/logo_small_white.png" alt="" />
           </a>
           <div class="footer-links">
             <a class="footer-link" href="./contact.html">Kontakt</a>
