--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <!--  #region header-->
     <header class="header-section">
       <div class="header-box content flex-h">
-        <a class="logo-link" href="#"
+        <a class="logo-link" href="index.html"
           ><div class="header-logo-box flex-h">
             <img class="logo" src="img/logo_small.png" />
             <span>Kochwelt</span>
@@ -47,7 +47,7 @@
               </svg>
               <!-- #endregion nav-icon -->
 
-              <a class="link" href="#"> Startseite </a>
+              <a class="link" href="index.html"> Startseite </a>
             </li>
             <li>
               <!-- #region nav-icon -->
