add dsgvo and impressum data

--- a/impressum.html
+++ b/impressum.html
@@ -1,38 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kochwelt - Impressum</title>
 
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <p>Hallo Welt</p>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
 
-
-
-
-
-
+    <!-- #region Impressum -->
+    <div>
+      <h1 class="adsimple-323016059">Impressum</h1>
+      <p class="adsimple-323016059">Informationen über den Diensteanbieter.</p>
+      <p class="adsimple-323016059">Marcel Buchmann</p>
+      <p class="adsimple-323016059">
+        Werftendensteig 1, <br />12347 Berlin, <br />Deutschland
+      </p>
+      <p>
+        <strong>Alternative Adresse</strong>
+        <br />Tassilopl. 25, 81541 München<br />
+        Deutschland
+      </p>
+      <div style="display: none"></div>
+      <p><strong>Tel.:</strong> 017662799766</p>
+      <div style="display: none"></div>
+      <div style="display: none"></div>
+      <div style="display: none"></div>
+      <h2
+        id="eu-streitschlichtung"
+        class="adsimple-323016059 fusion-responsive-typography-calculated"
+        data-fontsize="24"
+        style="--fontSize: 24; line-height: 1.5; --minFontSize: 24"
+        data-lineheight="36px"
+      >
+        EU-Streitschlichtung
+      </h2>
+      <p class="adsimple-323016059">
+        Gemäß Verordnung über Online-Streitbeilegung in
+        Verbraucherangelegenheiten (ODR-Verordnung) möchten wir Sie über die
+        Online-Streitbeilegungsplattform (OS-Plattform) informieren.<br />
+        Verbraucher haben die Möglichkeit, Beschwerden an die Online
+        Streitbeilegungsplattform der Europäischen Kommission unter
+        <a
+          class="adsimple-323016059"
+          href="https://ec.europa.eu/consumers/odr/main/index.cfm?event=main.home2.show&amp;lng=DE"
+          target="_blank"
+          rel="follow noopener"
+          >https://ec.europa.eu/consumers/odr/main/index.cfm?event=main.home2.show&amp;lng=DE</a
+        >
+        zu richten. Die dafür notwendigen Kontaktdaten finden Sie oberhalb in
+        unserem Impressum.
+      </p>
+      <p class="adsimple-323016059">
+        Wir möchten Sie jedoch darauf hinweisen, dass wir nicht bereit oder
+        verpflichtet sind, an Streitbeilegungsverfahren vor einer
+        Verbraucherschlichtungsstelle teilzunehmen.
+      </p>
+      <h2
+        id="bildernachweis"
+        class="adsimple-323016059 fusion-responsive-typography-calculated"
+        data-fontsize="24"
+        style="--fontSize: 24; line-height: 1.5; --minFontSize: 24"
+        data-lineheight="36px"
+      >
+        Bildernachweis
+      </h2>
+      <p class="adsimple-323016059">
+        Die Bilder, Fotos und Grafiken auf dieser Webseite sind urheberrechtlich
+        geschützt.
+      </p>
+      <p>
+        <strong>Die Bilderrechte liegen bei:</strong>
+        <br />
+        <a href="https://unsplash.com/de/" target="_blank" rel="noopener"
+          >https://unsplash.com/de/</a
+        >@johnnyhammer<br />
+        <a href="https://unsplash.com/de" target="_blank" rel="noopener"
+          >https://unsplash.com/de</a
+        >
+      </p>
+      <div style="display: none"></div>
+      <div style="display: none"></div>
+      <p>Alle Texte sind urheberrechtlich geschützt.</p>
+      <p style="margin-top: 15px">
+        Quelle: Erstellt mit dem
+        <a
+          href="https://www.adsimple.de/impressum-generator/"
+          title="Impressum Generator Deutschland von AdSimple"
+          >Impressum Generator</a
+        >
+        von AdSimple
+      </p>
+    </div>
+    <!-- #endregion -->
 
     <!-- #region Footer -->
     <footer class="flex-h">
-        <div class="footer-content">
-            <div>
-                <!-- Img führt zur Startseite-->
-                <a href="./index.html">
-                    <img src="./img/logo_small_white.png" alt="">
-                </a>
-                <div class="footer-links">
-                    <a class="footer-link" href="./contact.html" >Kontakt</a>
-                    <a class="footer-link" href="./impressum.html" >Impressum</a>
-                    <a class="footer-link" href="./dsgvo.html" >Datenschutz</a>
-                </div>
-            </div>
-            <div></div>
+      <div class="footer-content">
+        <div>
+          <!-- Img führt zur Startseite-->
+          <a href="./index.html">
+            <img src="./img/logo_small_white.png" alt="" />
+          </a>
+          <div class="footer-links">
+            <a class="footer-link" href="./contact.html">Kontakt</a>
+            <a class="footer-link" href="./impressum.html">Impressum</a>
+            <a class="footer-link" href="./dsgvo.html">Datenschutz</a>
+          </div>
         </div>
+        <div></div>
+      </div>
     </footer>
     <!-- #endregion -->
-</body>
+  </body>
 </html>
