change input script on contact page

--- a/contact.html
+++ b/contact.html
@@ -271,6 +271,6 @@
     </footer>
     <!-- #endregion -->
 
-    <script src="./script-contact.js" defer></script>
+    <script src="./script.js" defer></script>
   </body>
 </html>
