fix impressum links and active page design

--- a/dsgvo.html
+++ b/dsgvo.html
@@ -159,7 +159,7 @@
               </svg>
               <!-- #endregion nav-icon -->
 
-              <a class="link" href="#"> Impressum</a>
+              <a class="link" href="./impressum.html"> Impressum</a>
             </li>
           </ul>
         </nav>
