--- a/impressum.html
+++ b/impressum.html
@@ -158,7 +158,7 @@
               </svg>
               <!-- #endregion nav-icon -->
 
-              <a id="nav-impressum" class="link" href="#"> Impressum</a>
+              <a id="nav-impressum" class="link" href="./impressum.html"> Impressum</a>
             </li>
           </ul>
         </nav>
