--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </svg>
               <!-- #endregion nav-icon -->
 
-              <a class="link" href="index.html"> Startseite </a>
+              <a id="nav-home" class="link" href="index.html"> Startseite </a>
             </li>
             <li>
               <!-- #region nav-icon -->
