--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
               </svg>
               <!-- #endregion nav-icon -->
 
-              <a class="link" href="#"> Kontakt</a>
+              <a id="nav-contact" class="link" href="#"> Kontakt</a>
             </li>
             <li>
               <!-- #region nav-icon -->
@@ -158,7 +158,7 @@
               </svg>
               <!-- #endregion nav-icon -->
 
-              <a class="link" href="#"> Impressum</a>
+              <a class="link" href="./impressum.html"> Impressum</a>
             </li>
           </ul>
         </nav>
