added recipe site, added, dayli recipe site, links added all around

--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,9 @@
               </svg>
               <!-- #endregion nav-icon -->
 
-              <a class="link" href="#"> Rezept des Tages</a>
+              <a class="link" href="dayli-recipe-site.html">
+                Rezept des Tages</a
+              >
             </li>
             <li>
               <!-- #region nav-icon -->
@@ -125,7 +127,7 @@
               </svg>
               <!-- #endregion nav-icon -->
 
-              <a id="nav-contact" class="link" href="#"> Kontakt</a>
+              <a id="nav-contact" class="link" href="contact.html"> Kontakt</a>
             </li>
             <li>
               <!-- #region nav-icon -->
