recipe site - done!

--- a/dayli-recipe-site.html
+++ b/dayli-recipe-site.html
@@ -182,7 +182,9 @@
               Serviert mit Reis oder Naan ist es ein echter Genuss für alle
               Curryfans!
             </p>
-            <button>Rezept öffnen</button>
+            <a href="recipe-sites-Henry/Hänchencurry.html" class="button"
+              >Rezept öffnen</a
+            >
           </div>
         </div>
       </section>
@@ -190,7 +192,7 @@
       <!-- #region something-new-section -->
       <section class="something-new-section">
         <h2>Lust auf was Neues?</h2>
-        <div class="something-new-container flex-h">
+        <div class="something-new-container content flex-h">
           <div class="meal-box flex-h">
             <a href="#" class="flex-h"
               ><img class="meals-picture" src="img/food/Desserts/Donuts.jpg" />
@@ -219,8 +221,42 @@
       </section>
       <!-- #endregion something-new-section -->
       <section class="random-info-section">
-        <h2>Was ist besser?</h2>
+        <h2>Pfanne vs. Wok - Was ist besser?</h2>
+        <div class="info-text-box content flex-h">
+          <p>
+            <strong>Pfanne oder Wok – was ist denn nun besser?</strong><br />
+            Die Antwort: Kommt drauf an, worauf du Lust hast!<br />
+            Die klassische Pfanne ist ein echter Allrounder, perfekt für Steaks,
+            Bratkartoffeln oder Spiegeleier –<br />
+            alles, was gleichmäßig Hitze braucht. Der Wok hingegen bringt
+            richtig Schwung in die Küche:<br />
+            Mit seiner runden Form und der Hitze von unten wird Gemüse knackig,
+            Fleisch zart und alles ruckzuck gar.<br />
+            Ob Stir-Fry, Dämpfen oder sogar Frittieren – der Wok kann mehr, als
+            man denkt. Wer gerne kreativ kocht,<br />
+            macht am besten keinen Wettbewerb daraus, sondern lässt beide
+            glänzen.
+          </p>
+          <img class="meals-picture" src="img/wok.jpg" />
+        </div>
       </section>
     </main>
+    <!-- #region Footer -->
+    <footer class="flex-h">
+      <div class="footer-content content">
+        <div>
+          <!-- Img führt zur Startseite-->
+          <a href="./index.html">
+            <img src="img/logo_small_white.png" alt="" />
+          </a>
+          <div class="footer-links">
+            <a class="footer-link" href="./contact.html">Kontakt</a>
+            <a class="footer-link" href="./impressum.html">Impressum</a>
+            <a class="footer-link" href="./dsgvo.html">Datenschutz</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- #endregion -->
   </body>
 </html>
