--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               </svg>
               <!-- #endregion nav-icon -->
 
-              <a class="link" href="#"> Impressum</a>
+              <a class="link" href="impressum.html"> Impressum</a>
             </li>
           </ul>
         </nav>
@@ -207,21 +207,6 @@
       <section class="inspiration-section">
         <h2>Inspiration gefällig?</h2>
         <div class="meals-selection flex-h content">
-          <!-- HTML -->
-          <!-- HTML -->
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon"
-            viewBox="0 0 512 512"
-          >
-            <path
-              d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 
-              208-93.13 208-208S370.87 48 256 48zm35.31 292.69a16 
-              16 0 11-22.62 22.62l-96-96a16 16 0 010-22.62l96-96a16 
-              16 0 0122.62 22.62L206.63 256z"
-            />
-          </svg>
-
           <div class="meal flex-v">
             <!-- hier link zum rezept mit einfügen -->
             <!-- hier später img austauschen mit den rezept bild -->
@@ -235,65 +220,23 @@
           <div class="meal flex-v">
             <!-- hier link zum rezept mit einfügen -->
             <!-- hier später img austauschen mit den rezept bild -->
-            <a href="#">
+            <a href="recipe-sites-Henry/Gemüse-tofu-pfanne.html">
               <img
                 class="meals-picture"
-                src="img/food/Desserts/himbeer-kuchen.jpg"
+                src="img/food/Main Meal/Tofu-Pfanne.jpg"
             /></a>
-            <span class="meal-name">Himbeerkuchen</span>
+            <span class="meal-name">Tofu-Pfanne</span>
           </div>
           <div class="meal flex-v">
             <!-- hier link zum rezept mit einfügen -->
             <!-- hier später img austauschen mit den rezept bild -->
-            <a href="#"
+            <a href="recipe-sites-Henry/Avocado-Ei-Sandwich.html"
               ><img
                 class="meals-picture"
                 src="img/food/Breakfast/sandwich egg.jpg"
             /></a>
-            <span class="meal-name">Eiersandwich</span>
+            <span class="meal-name">Avocado-Ei-Sandwich</span>
           </div>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon"
-            viewBox="0 0 512 512"
-          >
-            <path
-              d="M48 256c0 114.87 93.13 208 208 208s208-93.13 
-              208-208S370.87 48 256 48 48 141.13 48 256zm257.37 0l-84.68-84.69a16 16 0 
-              0122.62-22.62l96 96a16 16 0 010 22.62l-96 96a16 16 0 01-22.62-22.62z"
-            />
-          </svg>
-        </div>
-
-        <!-- hier später ne funktion um durch die svgs zu schalten mit farbänderung. (fürs wechseln zwischen rezepten) -->
-        <div class="meal-selection-icons flex-h">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="selection-icon"
-            viewBox="0 0 512 512"
-          >
-            <path
-              d="M256 464c-114.69 0-208-93.31-208-208S141.31 48 256 48s208 93.31 208 208-93.31 208-208 208z"
-            />
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="selection-icon"
-            viewBox="0 0 512 512"
-          >
-            <path
-              d="M256 464c-114.69 0-208-93.31-208-208S141.31 48 256 48s208 93.31 208 208-93.31 208-208 208z"
-            />
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="selection-icon"
-            viewBox="0 0 512 512"
-          >
-            <path
-              d="M256 464c-114.69 0-208-93.31-208-208S141.31 48 256 48s208 93.31 208 208-93.31 208-208 208z"
-            />
-          </svg>
         </div>
       </section>
       <!-- #endregion inspiration-section -->
