realize recipe functionality

--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
                 />
               </svg>
               <!-- #endregion nav-icon -->
-
-              <a class="link" href="dayli-recipe-site.html">
+              <!-- TODO -->
+              <!-- <a class="link" href="dayli-recipe-site.html">
                 Rezept des Tages</a
-              >
+              > -->
+              <a class="link" href="./recipe-m.html?id=10002"> Rezept des Tages</a>
             </li>
             <li>
               <!-- #region nav-icon -->
