--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="img/logo_small.png" />
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <title>Kochwelt</title>
   </head>
   <body>
