add completed footer on every page

--- a/dsgvo.html
+++ b/dsgvo.html
@@ -1579,13 +1579,12 @@
 
     <!-- #region Footer -->
     <footer class="flex-h">
-      <div class="footer-content">
-        <div>
-          <!-- Img führt zur Startseite-->
+      <div class="content footer-content">
+        <div class="flex-h">
           <a href="./index.html">
-            <img src="./img/logo_small_white.png" alt="" />
+            <img src="img/logo_small_white.png" alt="" />
           </a>
-          <div class="footer-links">
+          <div class="footer-links flex-h">
             <a class="footer-link" href="./contact.html">Kontakt</a>
             <a class="footer-link" href="./impressum.html">Impressum</a>
             <a class="footer-link" href="./dsgvo.html">Datenschutz</a>
@@ -1593,6 +1592,6 @@
         </div>
       </div>
     </footer>
-    <!-- #endregion -->
+    <!-- #endregion Footer -->
   </body>
 </html>
