--- a/dayli-recipe-site.html
+++ b/dayli-recipe-site.html
@@ -243,13 +243,12 @@
     </main>
     <!-- #region Footer -->
     <footer class="flex-h">
-      <div class="footer-content content">
-        <div>
-          <!-- Img führt zur Startseite-->
+      <div class="content footer-content">
+        <div class="flex-h">
           <a href="./index.html">
             <img src="img/logo_small_white.png" alt="" />
           </a>
-          <div class="footer-links">
+          <div class="footer-links flex-h">
             <a class="footer-link" href="./contact.html">Kontakt</a>
             <a class="footer-link" href="./impressum.html">Impressum</a>
             <a class="footer-link" href="./dsgvo.html">Datenschutz</a>
@@ -257,6 +256,6 @@
         </div>
       </div>
     </footer>
-    <!-- #endregion -->
+    <!-- #endregion Footer -->
   </body>
 </html>
